<resources>
    <string name="app_name">JobStreamers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">jobstreamers@angadi.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="unblock">Unblock</string>

    <string name="upload_pic">Upload Profile Pic</string>
    <string name="go_live">Go Live</string>
    <string name="user_name">User Name</string>
    <string name="user_id">User ID</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="status">Marital Status</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
    <string name="desig">Designation</string>
    <string name="work">Work Exp</string>
    <string name="bio">Bio</string>
    <string name="short_desc">Short Description</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="register">Register</string>
    <string name="signin_google">Sign In With Google</string>
    <string name="reg_google">Register With Google</string>
    <string name="signin_fb">Sign In With Facebook</string>
    <string name="reg_fb">Register With Facebook</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\t have an account ?</string>
    <string name="register_here">Register here</string>
    <string name="email">Email ID</string>
    <string name="mobile">Mobile Number</string>
    <string name="enter_pass">Enter Password</string>
    <string name="create_new_acc">Create New Account</string>
    <string name="re_enter_pass">Re - Enter Password</string>
    <string name="already_have_account">Already have an account ?</string>
    <string name="i_agree">I Agree with terms and conditions</string>
    <string name="sign_in_as">Sign In As</string>
    <string name="employer">Employer</string>
    <string name="employee">Employee</string>
    <string name="contnue">Continue</string>D
    <string name="forgot_pass">Forgot Password</string>

    <!--facebook login credentials-->
    <string name="facebook_app_id">2206123896132342</string>
    <string name="fb_login_protocol_scheme">fb2206123896132342</string>

    <string name="ins_name">Institute Name</string>
    <string name="edu_type">Education Type</string>
    <string name="highest_qua">Highest Qualification</string>
    <string name="specialization">Specialization</string>
    <string name="yop">Year of Passing</string>
    <string name="edu_exp">Educational Experience</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="keywords">Keywords</string>
    <string name="resume">Resume</string>
    <string name="resume_upload">Resume Upload</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="cleared">Cleared</string>
    <string name="selected">Selected</string>
    <string name="tests">Tests</string>
    <string name="recents">Recents</string>
    <string name="block">Block</string>
    <string name="shortlisted">Shortlisted</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="tap_to_search">Tap here to search</string>
    <string name="recent_search">Recent Searches</string>
    <string name="clear_all">Clear All</string>
    <string name="enter_keywords">Enter Keywords</string>
    <string name="add">Add</string>
    <string name="upload_cv">Upload your CV</string>
    <string name="portfolio">Portfolio link or any sample work</string>
    <string name="support_format">Supported Formats: Doc, Docx, Pdf, Rtf, Jpeg</string>
    <string name="support_format2">Supported Formats: Zip, Pdf, Jpeg</string>
    <string name="paste_link">Paste your link</string>
    <string name="submit">Submit</string>
    <string name="company_name">Company Name</string>
    <string name="company_id">Company Id</string>
    <string name="applied_for">Post applied</string>
    <string name="rounds_cleared">Rounds cleared</string>
    <string name="search_by">Search by company name or id</string>
    <string name="type_msg">Type a message</string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="ctc">CTC</string>
    <string name="job_type">Job Type:</string>
    <string name="job_role">Job Role:</string>
    <string name="work_exp">Work Exp:</string>
    <string name="apply_now">Apply Now</string>
    <string name="applied">Applied</string>
    <string name="comments">Comments:</string>
    <string name="connect_now">Connect Now</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="login_reg">Login / Register</string>
    <string name="welcome">Welcome! lets get you to your dream job &#8230;</string>
    <string name="email_mobile">Email / Mobile</string>
    <string name="login">Login</string>
    <string name="proceed">By proceeding, you agree to JobStreamers</string>
    <string name="terms">Terms and Conditions</string>
    <string name="resend_code">Resend Code</string>
    <string name="enter_code">Enter code here</string>
    <string name="sent_code">We have sent you an access code to</string>
    <string name="for_veri">for verification</string>
    <string name="verification">Verification</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="finish">Finish</string>

    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>

</resources>
