<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/search"
        android:title="@string/search" />
    <item
        android:id="@+id/keywords"
        android:title="@string/keywords" />
    <item
        android:id="@+id/resume"
        android:title="@string/resume" />
    <item
        android:id="@+id/shortlisted"
        android:title="@string/shortlisted" />
    <item
        android:id="@+id/tests"
        android:title="@string/tests" />
    <item
        android:id="@+id/recents"
        android:title="@string/recents" />
    <item
        android:id="@+id/block"
        android:title="@string/block" />
    <item
        android:id="@+id/notifications"
        android:title="@string/notifications" />
    <item
        android:id="@+id/logout"
        android:title="@string/logout" />
</menu>