<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginOtpActivity">


    <!--<ScrollView-->
    <!--android:fillViewport="true"-->
    <!--android:focusableInTouchMode="true"-->
    <!--android:scrollbars="vertical"-->
    <!--android:fitsSystemWindows="true"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">


            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginBottom="40dp"
                android:src="@drawable/main_logo"
                android:transitionName="logo" />


            <com.awt.jobstreamers.utils.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_reg"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.awt.jobstreamers.utils.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/welcome" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.awt.jobstreamers.utils.CustomFontEditText
                    android:id="@+id/edt_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_mobile"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.awt.jobstreamers.utils.CustomFontButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/yellow_button_background_two"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>


        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.awt.jobstreamers.utils.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proceed" />

        <com.awt.jobstreamers.utils.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/terms"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>