<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="5dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="center">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:src="@drawable/main_logo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:orientation="vertical"
            android:padding="5dp">

            <com.awt.jobstreamers.utils.CustomFontTextView
                android:id="@+id/txt_company_name"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.awt.jobstreamers.utils.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_type"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <com.awt.jobstreamers.utils.CustomFontTextView
                    android:id="@+id/txt_job_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.awt.jobstreamers.utils.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_role"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <com.awt.jobstreamers.utils.CustomFontTextView
                    android:id="@+id/txt_job_role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.awt.jobstreamers.utils.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_exp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <com.awt.jobstreamers.utils.CustomFontTextView
                    android:id="@+id/txt_work_exp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="right">

                <com.awt.jobstreamers.utils.CustomFontButton
                    android:id="@+id/btn_applyNow"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="@drawable/yellow_button_background_two"
                    android:text="@string/apply_now"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <com.awt.jobstreamers.utils.CustomFontButton
                    android:id="@+id/btn_applied"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="@drawable/green_button_background"
                    android:text="@string/applied"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:visibility="gone" />


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>