<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.EducationalDetailsActivity">

    <include layout="@layout/toolbar" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/background"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.awt.jobstreamers.utils.CustomFontEditText
                android:id="@+id/edt_ins_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_background"
                android:gravity="center_vertical"
                android:hint="@string/ins_name"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />

            <com.awt.jobstreamers.utils.CustomFontEditText
                android:id="@+id/edt_edu_type"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_background"
                android:gravity="center_vertical"
                android:hint="@string/edu_type"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />

            <com.awt.jobstreamers.utils.CustomFontEditText
                android:id="@+id/edt_highest_qua"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_background"
                android:gravity="center_vertical"
                android:hint="@string/highest_qua"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />

            <com.awt.jobstreamers.utils.CustomFontEditText
                android:id="@+id/edt_specialization"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_background"
                android:gravity="center_vertical"
                android:hint="@string/specialization"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />

            <com.awt.jobstreamers.utils.CustomFontEditText
                android:id="@+id/edt_yop"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_background"
                android:gravity="center_vertical"
                android:hint="@string/yop"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left">

                    <com.awt.jobstreamers.utils.CustomFontButton
                        android:id="@+id/btn_skip"
                        style="?borderlessButtonStyle"
                        android:layout_width="100dp"
                        android:layout_height="45dp"
                        android:background="@drawable/yellow_button_background_two"
                        android:text="@string/skip"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textmed"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right">

                    <LinearLayout
                        android:id="@+id/layout_next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">


                        <com.awt.jobstreamers.utils.CustomFontTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/next"
                            android:textAllCaps="true"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/textmed"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_play_arrow"
                            android:tint="@color/colorPrimary" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>