<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".activities.KeywordsActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:padding="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gray_background"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8">

                <com.awt.jobstreamers.utils.CustomFontEditText
                    android:id="@+id/edt_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/enter_keywords"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/black"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2">

               <com.awt.jobstreamers.utils.CustomFontTextView
                   android:text="@string/add"
                   android:textAllCaps="true"
                   android:id="@+id/txt_add"
                   android:textSize="@dimen/textmed"
                   android:textColor="@color/dark_green"
                   android:textStyle="bold"
                   android:gravity="center"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_keywords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <LinearLayout
        android:background="@color/background"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_search"
            android:textColor="@color/white"
            android:text="@string/search"
            style="?android:borderlessButtonStyle"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="@dimen/textmed"
            android:layout_margin="20dp"
            android:background="@drawable/yellow_button_background_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>